--- a/tag_tree/src/App.css
+++ b/tag_tree/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  width: 600px;
+  height: auto;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+  border: 2px solid gray;
+  background-color: aliceblue;
+}
+.tags{
+  width: 98%;
+  height: 60px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  background-color: rgb(17, 164, 238);
+  border-radius: 5px;
+  margin: auto;
 }
+.tags>div{
+  width:150px;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tags>div>div{
+  width:150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
